modift:調整tokecheck router doc: 新增Swagger message /tokencheck
